--- a/_site.yml
+++ b/_site.yml
@@ -2,15 +2,15 @@
 # which converts .Rmd files to .md
 name: FKNMS MBON and IEA Webinized Infographic
 output_dir: "."
-include: ["*.Rmd"]
+include: ["*.Rmd", "*.md"]
 exclude: ["*.txt", "*.csv", "*.pdf", "*.docx"]
-output:
-    html_document:
-        # theme: cosmo
-        # highlight: textmate
-        # include:
-        #   after_body: footer.html
-        # css: styles.css
+output: html_document
+    # html_document:
+    #     theme: cosmo
+    #     highlight: textmate
+    #     include:
+    #       after_body: footer.html
+    #     css: styles.css
 
 # navbar:
 #   title: "My Website"
