--- a/config.toml
+++ b/config.toml
@@ -19,7 +19,7 @@ BookMenuBundle = "/menu"
 
 # (Optional, default docs) Specify section of content to render as menu
 # You can also set value to "*" to render all sections to menu
-BookSection = "docs"
+# BookSection = "docs"
 
 # (Optional) This value is duplicate of $link-color for making active link highlight in menu bundle mode
 # BookMenuBundleActiveLinkColor = \#004ed0
@@ -30,14 +30,14 @@ BookEnableJS = true
 
 # Set source repository location.
 # Used for 'Last Modified' and 'Edit this page' links.
-BookRepo = "https://github.com/alex-shpak/hugo-book"
+BookRepo = "https://github.com/marinebon/fk-iea"
 
 # Enable "Edit this page" links for 'doc' page type.
 # Disabled by default. Uncomment to enable. Requires 'BookRepo' param.
 # Path must point to 'content' directory of repo.
-BookEditPath = "edit/master/exampleSite/content"
+# BookEditPath = "edit/master/exampleSite/content"
 
 # (Optional, default January 2, 2006) Configure the date format used on the pages
 # - In git information
 # - In blog posts
-BookDateFormat = "Jan 2, 2006"
+BookDateFormat = "2006-01-02"
