fix(?) build. + rds read wrapper fn. + more rvc chunks

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,9 @@ cache:
   directories:
     - $HOME/bin
 
+before_install:
+  - sudo apt-get install -y r-cran-ncdf4 libudunits2-dev libudunits2-dev libgdal-dev libgeos-dev libproj-dev python3 python3-pip
+
 script:
   - Rscript -e 'blogdown::install_hugo()'
   # TODO: add custom infographiq build step here
