--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,5 +2,5 @@ Package: placeholder
 Type: Website
 Title: Does not matter.
 Version: 0.0.1
-Imports: ape, blogdown, car, clue, colorspace, cowplot, d3treeR, data.table, dendextend, devtools, dplyr, dygraphs, FD, fpc, FSA, futile.logger, ggplot2, grid, gridExtra, htmltools, htmlwidgets, lattice, leaflet, marmap, mgcv, ncdf4, parallel, plotly, plotrix, purrr, raster, rcompanion, RCurl, readr, reshape2, reticulate, rmarkdown, robis, rvc, sf, SnowballC, stringr, tidyverse, treemap, tm, vegan, vembedr, webshot, wordcloud, xts
-Remotes: rstudio/blogdown, timelyportfolio/d3treeR, iobis/robis, jeremiaheb/rvc
+Imports: blogdown
+Remotes: rstudio/blogdown
