--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,9 @@ cache:
 before_install:
   - sudo apt-get install -y r-cran-ncdf4 libudunits2-dev libudunits2-dev libgdal-dev libgeos-dev libproj-dev python3 python3-pip
 
+install:
+  - ./install_R_deps.sh
+
 script:
   - Rscript -e 'blogdown::install_hugo()'
   # TODO: add custom infographiq build step here
