--- a/content/posts/rvc_mhepner/DESCRIPTION
+++ b/content/posts/rvc_mhepner/DESCRIPTION
@@ -2,4 +2,4 @@ Package: placeholder
 Type: Website
 Title: Does not matter.
 Version: 0.0.1
-Imports: colorspace, cowplot, dendextend, ggplot2, grid, gridExtra, lattice, readr, tidyverse, treemap
+Imports: colorspace, cowplot, d3treeR, dendextend, ggplot2, grid, gridExtra, lattice, readr, tidyverse, treemap
