--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,18 @@ branches:
     - master
 
 cache:
+  # `packages: yes` caches $HOME/R/Library & sets R_LIB_USER=$HOME/R/Library environment variable
   packages: yes
   directories:
     - $HOME/bin
+    - $HOME/.cache/pip
+    - $TRAVIS_BUILD_DIR/src
+    - $TRAVIS_BUILD_DIR/static
+    - $HOME/.cache/robis_query_cache
+
+before_cache:
+  - rm -f $HOME/.cache/pip/log/debug.log
+
 
 before_install:
   - sudo apt-get install -y r-cran-ncdf4 libudunits2-dev libudunits2-dev libgdal-dev libgeos-dev libproj-dev python3 python3-pip
@@ -23,6 +32,12 @@ script:
   - Rscript -e 'blogdown::install_hugo()'
   # TODO: add custom infographiq build step here
   - Rscript -e 'blogdown::build_site()'
+
+# after_success:
+# - Rscript -e 'covr::codecov()'
+
+# after_failure:
+#   - travis cache --delete
 
 deploy:
   provider: pages
