--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ before_install:
   - sudo apt-get install -y r-cran-ncdf4 libudunits2-dev libudunits2-dev libgdal-dev libgeos-dev libproj-dev python3 python3-pip
 
 install:
-  - ./install_R_deps.sh
+  # - travis_wait 40 ./install_R_deps.sh
   - ./install_python_deps.sh
 
 script:
