--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ before_cache:
 
 before_install:
   - sudo apt-get install -y r-cran-ncdf4 libudunits2-dev libudunits2-dev libgdal-dev libgeos-dev libproj-dev python3 python3-pip
+  - pip3 install --upgrade pip
 
 install:
   # - travis_wait 40 ./install_R_deps.sh
