--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,9 @@ cache:
   directories:
     - $HOME/bin
     - $HOME/.cache/pip
+    - $HOME/.cache/robis_query_cache
     - $TRAVIS_BUILD_DIR/src
     - $TRAVIS_BUILD_DIR/static
-    - $HOME/.cache/robis_query_cache
 
 before_cache:
   - rm -f $HOME/.cache/pip/log/debug.log
@@ -23,7 +23,7 @@ before_cache:
 
 before_install:
   - sudo apt-get install -y r-cran-ncdf4 libudunits2-dev libudunits2-dev libgdal-dev libgeos-dev libproj-dev python3 python3-pip
-  - pip3 install --upgrade pip
+  - sudo pip3 install --upgrade pip
 
 install:
   # - travis_wait 40 ./install_R_deps.sh
