--- a/.travis.yml
+++ b/.travis.yml
@@ -22,8 +22,9 @@ before_cache:
 
 
 before_install:
-  - sudo apt-get install -y r-cran-ncdf4 libudunits2-dev libudunits2-dev libgdal-dev libgeos-dev libproj-dev python3 python3-pip
-  - sudo pip3 install --upgrade pip
+  - sudo apt-get install -y r-cran-ncdf4 libudunits2-dev libudunits2-dev libgdal-dev libgeos-dev libproj-dev python3
+  - python3 -m ensurepip --default-pip
+  - python3 -m pip install --upgrade pip setuptools wheel
 
 install:
   # - travis_wait 40 ./install_R_deps.sh
