--- a/.travis.yml
+++ b/.travis.yml
@@ -22,8 +22,7 @@ before_cache:
 
 
 before_install:
-  - sudo apt-get install -y r-cran-ncdf4 libudunits2-dev libudunits2-dev libgdal-dev libgeos-dev libproj-dev python3
-  - python3 -m ensurepip --default-pip
+  - sudo apt-get install -y r-cran-ncdf4 libudunits2-dev libudunits2-dev libgdal-dev libgeos-dev libproj-dev python3 python3-pip
   - python3 -m pip install --upgrade pip setuptools wheel
 
 install:
