--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ before_install:
   - python3 -m pip install --upgrade pip setuptools wheel
 
 install:
-  # - travis_wait 40 ./install_R_deps.sh
+  - travis_wait 40 ./install_R_deps.sh
   - ./install_python_deps.sh
 
 script:
