--- a/content/modals/marine_life/DESCRIPTION
+++ b/content/modals/marine_life/DESCRIPTION
@@ -2,5 +2,5 @@ Package: placeholder
 Type: Website
 Title: Does not matter.
 Version: 0.0.1
-Imports: robis, glue
+Imports: robis, glue, reticulate
 Remotes: iobis/robis
