--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseurl = "https://marinebon.github.io/fk-iea/"
 languageCode = "en-us"
 title = "FKNMS MBON and IEA Webinized Infographic"
-theme = "hugo-universal-theme"
+theme = "book"
 relativeURLs = false
 enableEmoji = true
 publishDir = "public"  # TODO: change to docs?
