+ remotes::install_github("marinebon/infographiq")

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,4 +3,6 @@ Type: Website
 Title: Does not matter.
 Version: 0.0.1
 Imports: blogdown
-Remotes: rstudio/blogdown
+Remotes: 
+  - rstudio/blogdown
+  - marinebon/infographiq
