--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,5 +2,5 @@ Package: placeholder
 Type: Website
 Title: Does not matter.
 Version: 0.0.1
-Imports: blogdown, infographiq, here
+Imports: blogdown, infographiq, here, widgetframe
 Remotes: rstudio/blogdown, marinebon/infographiq
