--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,5 +2,5 @@ Package: placeholder
 Type: Website
 Title: Does not matter.
 Version: 0.0.1
-Imports: here, widgetframe
+Imports: here, widgetframe, rmarkdown
 Remotes:
