Revert "disable manual R dep install in travis"
This reverts commit dddefc30a808388a8f6cd1c7e8e43cedcf19b41b.

--- a/.travis.yml
+++ b/.travis.yml
@@ -43,7 +43,7 @@ before_install:
   - R --version
 
 install:
-  # - travis_wait 40 ./install_R_deps.sh
+  - travis_wait 40 ./install_R_deps.sh
   - ./install_python_deps.sh
 
 script:
