--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,5 +2,6 @@ Package: placeholder
 Type: Website
 Title: Does not matter.
 Version: 0.0.1
-Imports: here, widgetframe, rmarkdown, robis, glue, reticulate, readr, tidyverse
+Imports: here, widgetframe, rmarkdown, robis, glue, reticulate, readr,
+    tidyverse, dygraphs
 Remotes: iobis/robis
