--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ before_install:
   # ubuntu system package dependencies:
   - sudo apt-get install -y r-cran-ncdf4 libudunits2-dev libudunits2-dev libgdal-dev libgeos-dev libproj-dev python3 python3-pip
   # python package manager updates:
-  - sudo python3 -m pip install --upgrade pip setuptools wheel
+  - sudo python3 -m pip install --upgrade pip setuptools wheel numpy
   # log extra info to help debug:
   - python3 --version
   - R --version
